[package]
name = "event-queue"
version = "0.1.0"
edition = "2021"
authors=["Burak Selim Şenyurt"]
homepage="https://www.buraksenyurt.com"
license="GPL"
repository="https://github.com/buraksenyurt/silver-eureka"
description="crates.io için bir paket nasıl hazırlanırın ele alındığı öğrenme amaçlı modüldür."
categories=[
    "data-structures"
]
keywords=[
    "tutorial",
    "experimental",
    "dummy",
    "queue",
    "data-structure"
]
readme="README.md"
maintenance = { status = "experimental" }
